@@ -41,4 +41,11 @@
       </fileset>
     </copy>
   </target>
+
+  <target name="javadocs" depends="common-solr.javadocs">
+    <mkdir dir="${dest}/docs/api/solrj"/>
+    <copy todir="${dest}/docs/api/solrj">
+      <fileset dir="${javadoc.dir}"/>
+    </copy>
+  </target>
 </project>
